Fix %t logic and don't output any %; or %e parts. Fixes PR lib/47490 thanks to Julien Oster